--- a/pets/package.json
+++ b/pets/package.json
@@ -15,7 +15,9 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.5"
+    "react-hook-form": "^7.51.5",
+    "swagger-ui-dist": "^5.17.14",
+    "swagger-ui-react": "^5.17.14"
   },
   "devDependencies": {
     "eslint": "^8",
